# kagiri-api

./: .gitignore  Cargo.toml  Rocket.toml
src/: main.rs  schema.rs
src/models/: auth.rs
src/routes/auth/: login.rs  register.rs
src/utils/: db.rs  hash.rs  jwt.rs  mod.rs  validator.rs
