[package]
name = "kagiri-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.0", features = ["json", "secrets"] }
serde_derive = "1.0.163"
dotenvy = "0.15.7"
regex = "1.10.2"
bcrypt = "0.15.0"
chrono = "0.4.31"
jsonwebtoken = "9.2.0"
cookie = "0.18.0"